
bin_PROGRAMS = zarbee

zarbee_SOURCES = src/main.cc \
	src/world.cc \
	src/zar_nodes.cc \
	src/zar_parser.cc \
	src/zar_param_table.cc \
	src/bee_base.cc \
	src/bee_primitives.cc \
	src/bee_modifiers.cc \
	src/camera.cc \
	src/light.cc \
	src/exception.cc \
	src/time.cc \
	src/texture.cc \
	src/music.cc \
	src/world.hh \
	src/zar_nodes.hh \
	src/zar_parser.hh \
	src/zar_param_table.hh \
	src/bee_base.hh \
	src/bee_primitives.hh \
	src/bee_modifiers.hh \
	src/camera.hh \
	src/light.hh \
	src/exception.hh \
	src/time.hh \
	src/texture.hh \
	src/music.hh

INCLUDES = $(DEPS_CFLAGS) $(GL_CFLAGS) $(SDL_CFLAGS)
LIBS = $(DEPS_LIBS) $(GL_LIBS) $(SDL_LIBS)
